force-app/main/default/objects/Product2/fields/LS_C_Default__c.field-meta.xml
<CustomField>
    <fullName>LS_C_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifier for LS/C Default contract line items products</description>
    <label>LS/C Default</label>
    <type>Checkbox</type>
</CustomField>