force-app/main/default/objects/Product2/fields/Omitted_from_Product_Selector__c.field-meta.xml
<CustomField>
    <fullName>Omitted_from_Product_Selector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omitted from Product Selector</label>
    <type>Checkbox</type>
</CustomField>