force-app/main/default/objects/Product2/fields/Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Category__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Category</label>
    <type>Text</type>
</CustomField>