force-app/main/default/objects/Product2/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Media IO</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>