force-app/main/default/objects/Product2/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <label>Sub Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Action Sports</fullName>
            </value>
            <value>
                <fullName>Athlete Exchange</fullName>
            </value>
            <value>
                <fullName>Brands Corporate</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Global Football</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>LS / Cycle</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Team Sports</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>