force-app/main/default/objects/Product2/fields/Workday_Type__c.field-meta.xml
<CustomField>
    <fullName>Workday_Type__c</fullName>
    <label>Workday Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Contract Line Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>