force-app/main/default/objects/Product2/fields/X9_Default_Items__c.field-meta.xml
<CustomField>
    <fullName>X9_Default_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>9 Default items used when a user does not create a named product</description>
    <label>9 Default Items</label>
    <type>Checkbox</type>
</CustomField>