force-app/main/default/objects/Product2/listViews/Active_Products_ALL.listView-meta.xml
<ListView>
    <fullName>Active_Products_ALL</fullName>
    <columns>Division__c</columns>
    <columns>Sub_Division__c</columns>
    <columns>Department__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Products - ALL</label>
</ListView>