force-app/main/default/objects/Product2/listViews/Active_Products_by_Name.listView-meta.xml
<ListView>
    <fullName>Active_Products_by_Name</fullName>
    <columns>Division__c</columns>
    <columns>Sub_Division__c</columns>
    <columns>Department__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Omitted_from_Product_Selector__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>equals</operation>
        <value>Hospitality Management</value>
    </filters>
    <label>Active Products by Name</label>
</ListView>