force-app/main/default/objects/Product2/listViews/Active_Products_LS_Cycle.listView-meta.xml
<ListView>
    <fullName>Active_Products_LS_Cycle</fullName>
    <columns>Division__c</columns>
    <columns>Sub_Division__c</columns>
    <columns>Department__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>LS/Cycle Content,LS/Cycle Corporate,LS/Cycle Influencer,LS/Cycle Retainer</value>
    </filters>
    <label>Active Products - LS/Cycle</label>
</ListView>