force-app/main/default/objects/Product2/listViews/Inactive.listView-meta.xml
<ListView>
    <fullName>Inactive</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Division__c</columns>
    <columns>Sub_Division__c</columns>
    <columns>Department__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Brands Middle East</value>
    </filters>
    <label>Inactive</label>
</ListView>